kube/mongo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stix-gen-mongo
  namespace: stix-gen
  labels:
    app: stix-gen-mongo
spec:
  containers:
  - name: stix-gen-mongo
    image: mongo
    command:
    - "mongod"
    - "--bind_ip"
    - "0.0.0.0"
    - "--port"
    - "27017"
    ports:
    - containerPort: 27017
      name: mongocontainer
