kube/stix_gen_api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stix-gen-api
  namespace: stix-gen
  labels:
    app: stix-gen-api
spec:
  containers:
  - name: stix-gen-api
    image: us.icr.io/stix-gen/stix-builder-api:beta-2.0.6
    ports:
    - containerPort: 5000
      name: stixgen
