kube/stix_gen_ui.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stix-gen-ui
  namespace: stix-gen
  labels:
    app: stix-gen-ui
spec:
  containers:
  - name: stix-gen-ui
    image: cnebs/bundlegenerator:2.1.2
    ports:
    - containerPort: 3000
      name: stixgen
