kube/stix_gen_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stix-gen-svc
  namespace: stix-gen
spec:
  selector:
    app: stix-gen-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
